# pace2026

./: .gitignore  INSTALL.md  Makefile  README.md  SOLVER_DESIGN.md  docker_setup.sh  existing_stride_runs.txt  solver.cpp  solver_aadit.cpp  solver_exact.cpp  solver_h_non_random.cpp  solver_heuristic.cpp
pace26stride/: Cargo.toml  README.md  stride.lst
pace26stride/src/: lib.rs
pace26stride/src/commands/: arguments.rs  check.rs  download.rs  mod.rs
pace26stride/src/commands/run/: command.rs  display.rs  mod.rs  pace.rs  summary_writer.rs  upload.rs
pace26stride/src/instances/: directory.rs  instance.rs  mod.rs  parser.rs
pace26stride/src/job/: job_processor.rs
pace26stride/testcases/: test.lst  test_recursive_list.lst
pace26stride/testcases/invalid_solutions/: score1_sa2e2l7j.in
pace26stride/testcases/lists/: 123.lst  with_digest.lst  with_glob.lst  with_include.lst
pace26stride/testcases/test_solver_valid/: shortwait.in
pace26stride/testcases/valid_solutions/: score10_n07l_lkc_with_approx.in
pace26stride/tests/: command_check.rs  command_run.rs  profile.rs
src/: main.cpp
src/core/: Forest.hpp  Random.hpp  Timer.hpp  Tree.hpp
src/exact/: InProcessExactMaf.hpp  TinyExactOracle.hpp
src/heuristics/: ActiveCherryGreedyApprox.hpp  AgreementComponentPacking.hpp  CherryPairApprox.hpp  FastCherryApprox.hpp  ForestCrossover.hpp  LocalImprove.hpp  RandomRestart.hpp  TwoApprox.hpp
src/io/: NewickParser.hpp  PaceParser.hpp
src/reductions/: ChainReduction.hpp  ClusterDecomposition.hpp  CommonSubtreeReduction.hpp  ReductionStack.hpp  (+1 more)
